--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,25 +6,25 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #1685a9;
+  --ifm-color-primary-dark: #147898;
+  --ifm-color-primary-darker: #137190;
+  --ifm-color-primary-darkest: #0f5d76;
+  --ifm-color-primary-light: #1892ba;
+  --ifm-color-primary-lighter: #1999c2;
+  --ifm-color-primary-lightest: #1daddc;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+[data-theme='light'] {
+  --ifm-color-primary: #1892ba;
+  --ifm-color-primary-dark: #1683a7;
+  --ifm-color-primary-darker: #147c9e;
+  --ifm-color-primary-darkest: #116682;
+  --ifm-color-primary-light: #1aa1cd;
+  --ifm-color-primary-lighter: #1ca8d6;
+  --ifm-color-primary-lightest: #2db7e4;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
